--- a/Resizing images (making thumbs).ipynb
+++ b/Resizing images (making thumbs).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -90,8 +90,8 @@
     "basewidth = 75\n",
     "basewidth1 = 230\n",
     "basewidth2 = 180\n",
-    "for root, dirs, files in os.walk('../Pictures//Unique'):\n",
-    "    if root != '../Pictures//Unique':\n",
+    "for root, dirs, files in os.walk('..\\Pictures\\\\Unique'):\n",
+    "    if root != '..\\Pictures\\\\Unique':\n",
     "        if ('tm' not in ''.join(files)) or ('t' not in ''.join(files)):\n",
     "            for name in files:\n",
     "                img = Image.open('%s/%s'%(root, name)).convert('RGB')\n",
